--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:meticulous": "meticulous run-all-tests --headless --parallelize --deflake"
   },
   "eslintConfig": {
     "extends": [
